--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,11 +1,11 @@
 {
   "name": "ghcp, C#, .NET 9 - Dev Environment",
-  "image": "mcr.microsoft.com/devcontainers/dotnet:0-9.0",
-  "features": {
-    "ghcr.io/devcontainers/features/dotnet:1": {
-      "version": "9.0"
-    }
-  },
+// "image": "mcr.microsoft.com/devcontainers/dotnet:0-9.0",
+//  "features": {
+//    "ghcr.io/devcontainers/features/dotnet:1": {
+//      "version": "9.0"
+//    }
+//  },
   "customizations": {
     "vscode": {
       "extensions": [
